// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notes /> handles add note 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={[Function]}
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      October 1, 2019 at 3:11 PM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value=""
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value=""
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> handles back to notes 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      October 1, 2019 at 3:11 PM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value="Example note"
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value="This is a note"
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[MockFunction]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> handles change note 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={[Function]}
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      October 1, 2019 at 3:11 PM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value="Updated note"
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value=""
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> handles delete for multiple notes 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={[MockFunction]}
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      October 1, 2019 at 3:11 PM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value="Example note"
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value="This is a note"
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[MockFunction]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> renders correctly 1`] = `
<div
  className="notes-app"
>
  <h1
    className="ui-text ui-text--display"
  >
    Notes
  </h1>
  <div
    className="notes-app-bottom-bar"
  >
    <p
      className="ui-text ui-text--body"
    >
      No Notes
    </p>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;
